--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-＃おすすめのゲームについて
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <!--①「<head>」タグの中に必要なメタ要素は何か？（文字コードを指定する）-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+<h1>ハマっているゲームについて</h1>
+<br>
+<h2>ゲームのご紹介</h2>
