--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <!--①「<head>」タグの中に必要なメタ要素は何か？（文字コードを指定する）-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>
-  <link rel="stylesheet" href="style.css">
+  <title>おすすめのゲーム紹介サイト</title>
 </head>
 
 <body>
