Update game title and introduction in index.html

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <!--①「<head>」タグの中に必要なメタ要素は何か？（文字コードを指定する）-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>おすすめのゲーム紹介サイト</title>
 </head>
 
 <body>
-<h1>ハマっているゲームについて</h1>
+<h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
-<h2>ゲームのご紹介</h2>
+<h2>
+<p>今回ご紹介するのは
 </body>
 </html>
