--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 <h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
-<h2>
-<p>今回ご紹介するのは
+<h2>このゲームについて<h2>
+<p>このゲームは韓国のインディーゲームスタジオであるProjectMoon様よりリリースされたゲームです。</p>
+
 </body>
 </html>
