--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
 <h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
+<a href="price.html">「都市とは」</a>
+<h2>紹介理由</h2>
+<p>プレイしてみてとても面白いと感じたので紹介します<p>
 <h2>このゲームについて<h2>
 <p>このゲームは韓国のインディーゲームスタジオであるProjectMoon様よりリリースされたゲームです。</p>
-
+<h2>どのようなゲームか？</h2>
+<p>都市にそびえたつ図書館を舞台に、「世界でたった一つの本」にたどり着くために
+  図書館にやってきたゲストたちと争うシミュレーションRPGです。
 </body>
 </html>
