--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
 <a href="price.html">「都市とは」</a>
+<h2>登場人物は<a href="library.html">ここ</a></h2>
 <h2>紹介理由</h2>
 <p>プレイしてみてとても面白いと感じたので紹介します<p>
 <h2>このゲームについて<h2>
@@ -17,5 +18,11 @@
 <h2>どのようなゲームか？</h2>
 <p>都市にそびえたつ図書館を舞台に、「世界でたった一つの本」にたどり着くために
   図書館にやってきたゲストたちと争うシミュレーションRPGです。
+<h2>ゲームの魅力</h2>
+このゲームには様々な魅力があるのでいくつかご紹介します。
+まず一つ目にキャラクターとそのストーリー！！
+このゲームの主人公は図書館長である”アンジェラ”と図書館に迷い込んできた”ローラン"の二人がどのような経験をしてきたのかに目が離せない！！
+加えて図書館に存在する各司書たちとのストーリーも二人のことを掘り下げること間違いなし！！
+<p>このゲームの戦闘システムは<a href=https://www.youtube.com/watch?v=aSq-ZN12TLk>こちら
 </body>
 </html>
