Enhance game description and features in index.html
Updated game description and added details about characters and music.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>おすすめのゲーム紹介サイト</title>
 </head>
-
+<link rel="stylesheet" href="style.css">
 <body>
 <h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
@@ -19,10 +19,14 @@
 <p>都市にそびえたつ図書館を舞台に、「世界でたった一つの本」にたどり着くために
   図書館にやってきたゲストたちと争うシミュレーションRPGです。
 <h2>ゲームの魅力</h2>
-このゲームには様々な魅力があるのでいくつかご紹介します。
-まず一つ目にキャラクターとそのストーリー！！
+<p>このゲームには様々な魅力があるのでいくつかご紹介します。
+まず一つ目にキャラクターとストーリー！！
 このゲームの主人公は図書館長である”アンジェラ”と図書館に迷い込んできた”ローラン"の二人がどのような経験をしてきたのかに目が離せない！！
 加えて図書館に存在する各司書たちとのストーリーも二人のことを掘り下げること間違いなし！！
+<p>二つ目は多彩な戦闘BGM！！
+  ゲストとの戦闘で流れるさまざまなBGMは図書館での戦闘を彩ってくれるでしょう！！
+  オープニングテーマや一部戦闘テーマはMILIというグループが手掛けるボーカルアリのテーマです！！
+  オープニングテーマは<a href=https://www.youtube.com/watch?v=ofmYqXfjFs8&list=RDofmYqXfjFs8&start_radio=1>
 <p>このゲームの戦闘システムは<a href=https://www.youtube.com/watch?v=aSq-ZN12TLk>こちら
 </body>
 </html>
