Fix link text for opening theme in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>二つ目は多彩な戦闘BGM！！
   ゲストとの戦闘で流れるさまざまなBGMは図書館での戦闘を彩ってくれるでしょう！！
   オープニングテーマや一部戦闘テーマはMILIというグループが手掛けるボーカルアリのテーマです！！
-  オープニングテーマは<a href=https://www.youtube.com/watch?v=ofmYqXfjFs8&list=RDofmYqXfjFs8&start_radio=1>
+  オープニングテーマは<a href=https://www.youtube.com/watch?v=ofmYqXfjFs8&list=RDofmYqXfjFs8&start_radio=1>こちら
 <p>このゲームの戦闘システムは<a href=https://www.youtube.com/watch?v=aSq-ZN12TLk>こちら
 </body>
 </html>
