--- a/library.html
+++ b/library.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>登場人物</title>
+</head>
 <h1>登場人物について</h1>
 <br>
 <h2>主人公</h2>
@@ -11,4 +18,5 @@
 <h2>司書たち</h2>
 <br>
 <h3>マルクト</h3>
-<p
+<p>
+</p>
