--- a/library.html
+++ b/library.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>登場人物</title>
 </head>
+<link rel="stylesheet" href="style.css">
+<body>
 <h1>登場人物について</h1>
 <br>
 <h2>主人公</h2>
@@ -18,5 +20,10 @@
 <h2>司書たち</h2>
 <br>
 <h3>マルクト</h3>
-<p>
-</p>
+<p>歴史の階指定司書。他の階の司書と同じくアンジェラの過去について何かしら知っているようだが...？
+<h3>ホド</h3>
+<p>文学の階指定司書。アンジェラに対して多少やわらかい態度をとっている。自分の過去について何か思うところがあるようだ。
+<h3>イェソド</h3>
+<p>技術科学の階指定司書。めちゃくちゃ毒舌、ただし優しいところもある。アンジェラの起こしたある行動に対して怒っている。
+<h3>ネツァク</h3>
+<p>芸術の階指定司書。飲んだくれ。ローランと酒で盛り上がる。
