Update link to '都市とは' page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
-<a href="price.html">「都市とは」</a>
+<a href="toshi.html">「都市とは」</a>
 <h2>登場人物は<a href="library.html">ここ</a></h2>
 <h2>紹介理由</h2>
 <p>プレイしてみてとても面白いと感じたので紹介します<p>
