Add character images and update descriptions in library.html
Added images for characters and updated their descriptions.

--- a/library.html
+++ b/library.html
@@ -10,20 +10,26 @@
 <h1>登場人物について</h1>
 <br>
 <h2>主人公</h2>
+<img src="sample101.jpg" alt="">
 <h3>アンジェラ</h3>
 <p>図書館の館長兼司書。
   人間のような見た目をしているが実際は機械である。人間になるために「たった一つの完璧な本」を求めている。
   図書館が発生する原因を何か知っているようだが....？
-<h3>ローラン</h3>
+ <img src="sample101.jpg" alt="">
+  <h3>ローラン</h3>
   <p>突如として開館前の図書館に現れた自称ド底辺フィクサー。
     なぜか都市のさまざまな組織・現象について非常に詳しいようだ。
 <h2>司書たち</h2>
 <br>
+ <img src="sample101.jpg" alt="">
 <h3>マルクト</h3>
 <p>歴史の階指定司書。他の階の司書と同じくアンジェラの過去について何かしら知っているようだが...？
+ <img src="sample101.jpg" alt="">
 <h3>ホド</h3>
 <p>文学の階指定司書。アンジェラに対して多少やわらかい態度をとっている。自分の過去について何か思うところがあるようだ。
+<img src="sample101.jpg" alt="">
 <h3>イェソド</h3>
 <p>技術科学の階指定司書。めちゃくちゃ毒舌、ただし優しいところもある。アンジェラの起こしたある行動に対して怒っている。
+ <img src="sample101.jpg" alt="">
 <h3>ネツァク</h3>
 <p>芸術の階指定司書。飲んだくれ。ローランと酒で盛り上がる。
