Update links and add image tag in index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
-<a href="toshi.html">「都市とは」</a>
-<h2>登場人物は<a href="library.html">ここ</a></h2>
+<a href="toshi.html">「都市とは」</a><a href="library.html">登場人物</a>
+ <img src="" alt="">
 <h2>紹介理由</h2>
 <p>プレイしてみてとても面白いと感じたので紹介します<p>
 <h2>このゲームについて<h2>
