Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+der<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 <h1>ライブラリーオブルイナ（library of ruina）</h1>
 <hr>
 <a href="toshi.html">「都市とは」</a><a href="library.html">登場人物</a>
- <img src="" alt="">
+ <img src="header.jpg" alt="">
 <h2>紹介理由</h2>
 <p>プレイしてみてとても面白いと感じたので紹介します<p>
 <h2>このゲームについて<h2>
