--- a/toshi.html
+++ b/toshi.html
@@ -23,5 +23,6 @@
 <h2>ロボトミーコーポレーション</h2>
 <p>かつて都市の「翼」であった企業。通称L社。図書館はこの企業があった跡地に出現した。
   　都市にエネルギーを供給する会社であったが突如として崩壊。図書館と何か関係があるようだが...果たして真相は？？？
-<a href="index.html">おすすめのゲーム紹介ページへ</a>
+<p><a href="index.html">おすすめのゲーム紹介ページへ</a>
 <a href="library.html">登場人物ページへ</a>
+</p>
