--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
   ゲストとの戦闘で流れるさまざまなBGMは図書館での戦闘を彩ってくれるでしょう！！
   オープニングテーマや一部戦闘テーマはMILIというグループが手掛けるボーカルアリのテーマです！！
   オープニングテーマは<a href=https://www.youtube.com/watch?v=ofmYqXfjFs8&list=RDofmYqXfjFs8&start_radio=1>こちら
-  戦闘システムは<a href=https://www.youtube.com/watch?v=aSq-ZN12TLk>ここ</a></p>
+  <a href=https://www.youtube.com/watch?v=aSq-ZN12TLk>戦闘システムはここ</a>
 </body>
 </html>
