--- a/library.html
+++ b/library.html
@@ -36,6 +36,4 @@
 <hr>
 <a href="index.html">おすすめのゲーム紹介ページへ</a>
 <a href="toshi.html">「都市とは」</a>
-<hr>
-<h2>画像出典</h2>
-<p>https://store.steampowered.com/app/1256670/Library_Of_Ruina/
+</body>
