--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <img src="header.jpg" alt="">
 <h2>紹介理由</h2>
 <p>プレイしてみてとても面白いと感じたので紹介します<p>
-<h2>このゲームについて<h2>
+<h2>このゲームについて</h2>
 <p>このゲームは韓国のインディーゲームスタジオであるProjectMoon様よりリリースされたゲームです。</p>
 <h2>どのようなゲームか？</h2>
 <p>都市にそびえたつ図書館を舞台に、「世界でたった一つの本」にたどり着くために
