--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
 <p>https://www.youtube.com/watch?v=ofmYqXfjFs8&list=RDofmYqXfjFs8&start_radio=1
   https://www.youtube.com/watch?v=aSq-ZN12TLk
   https://store.steampowered.com/app/1256670/Library_Of_Ruina/
+<hr>
+<a href="toshi.html">「都市とは」</a>
+<a href="library.html">登場人物</a>
 </body>
 </html>
